--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 
     <header>
 
-      <h1>Aesop's Fables</h1>
+      <div class="container">
+	<h1><span>Aesop's<br>Fables</span></h1>
+
+	<div class="blobs_1"></div>
+	<div class="blobs_2"></div>
+	<div class="blobs_3"></div>
+	<div class="blobs_4"></div>
+	<div class="blobs_5"></div>
+	<div class="blobs_6"></div>
+	<div class="blobs_7"></div>
+</div>
 
     </header>
 
